--- a/Carts.yml
+++ b/Carts.yml
@@ -9,6 +9,9 @@ Carts:
         - narrate <context.item>
         
         on player right clicks entity with diamond_spade:
-        - if <context.entity.entity_type||null> == HORSE:
-            - narrate <context.entity>
+        - if <context.item.unbreakable> && <context.item.durability> <= 60:
+            - if <context.entity.entity_type||null> == HORSE:
+                - narrate <context.entity>
+                - spawn armor_stand <context.entity.location> save:horseCart
+                - narrate <entry[horseCart].spawned_entity>
         - determine cancelled
