--- a/Carts.yml
+++ b/Carts.yml
@@ -12,8 +12,8 @@ Carts:
         - if <context.item.unbreakable> && <context.item.durability> <= 60:
             - if <context.entity.entity_type||null> == HORSE:
                 - narrate <context.entity>
-                - spawn armor_stand <context.entity.location> save:horseCart
+                - spawn armor_stand <context.entity.location.backward_flat[1.5]> save:horseCart
                 - define horseCart <entry[horseCart].spawned_entity>
-                - define cartOffset <context.entity.location.with_pitch[0].direction.vector.mul[-3]>
-                - adjust <def[horseCart].as_entity> "attach_to:<context.entity>|<def[cartOffset].as_location>|true"
+                - equip <def[horseCart].as_entity> head:<context.item>
+                - adjust <def[horseCart].as_entity> "attach_to:<context.entity>|l@0,0,-1.5|true"
         - determine cancelled
